背景画像の差し替えとプロフ画像の追加。

--- a/2022/summer/entry/css/styles.css
+++ b/2022/summer/entry/css/styles.css
@@ -10143,7 +10143,7 @@ header.masthead {
   padding-top: 10.5rem;
   padding-bottom: 6rem;
   text-align: center;
-  background-image: url("../assets/img/header-bg.jpg");
+  background-image: url("../assets/img/header-bg2.jpg");
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
