--- a/2023/summer/entry/assets/css/style.css
+++ b/2023/summer/entry/assets/css/style.css
@@ -1,7 +1,26 @@
 body {
-  background-color: aqua;
-  background-image: radial-gradient(circle, white 10%, transparent 10%);
-  background-size: 30px 30px;
+  margin: 0;
+  background-color: transparent !important;
+}
+
+.wave {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url('assets/img/wave.svg');
+  background-repeat: repeat-x;
+  animation: waveAnimation 10s linear infinite;
+}
+
+@keyframes waveAnimation {
+  0% {
+    background-position-x: 0;
+  }
+  100% {
+    background-position-x: 100%;
+  }
 }
 
 h2 {
@@ -18,7 +37,7 @@ h2 {
   background-image: url('/assets/img/header-bg2.jpg');
   background-size: cover;
   background-position: center;
-  height: 300px; /* 必要に応じて適切な高さを指定 */
+  height: 300px; 
   position: relative;
 }
 
