--- a/2023/summer/entry/assets/css/style.css
+++ b/2023/summer/entry/assets/css/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: 'BIZ UDPGothic', sans-serif;
+  font-family: "BIZ UDPGothic", sans-serif;
 }
 
 h2 {
@@ -8,8 +8,20 @@ h2 {
   padding: 0.25em;
   border-top: solid 2px #6cb4e4;
   border-bottom: solid 2px #6cb4e4;
-  background: -webkit-repeating-linear-gradient(-45deg, #f0f8ff, #f0f8ff 3px,#e9f4ff 3px, #e9f4ff 7px);
-  background: repeating-linear-gradient(-45deg, #f0f8ff, #f0f8ff 3px,#e9f4ff 3px, #e9f4ff 7px);
+  background: -webkit-repeating-linear-gradient(
+    -45deg,
+    #f0f8ff,
+    #f0f8ff 3px,
+    #e9f4ff 3px,
+    #e9f4ff 7px
+  );
+  background: repeating-linear-gradient(
+    -45deg,
+    #f0f8ff,
+    #f0f8ff 3px,
+    #e9f4ff 3px,
+    #e9f4ff 7px
+  );
 }
 
 .contest-title {
@@ -20,7 +32,7 @@ h2 {
 }
 
 .move {
-  color: #32CB00;
+  color: #32cb00;
   display: inline-block;
   cursor: pointer;
   position: relative;
@@ -64,7 +76,7 @@ h2 {
   color: orange;
 }
 
-.headline{
+.headline {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -72,10 +84,93 @@ h2 {
   text-align: center;
 }
 
-.about {
+.container {
   text-align: center;
 }
 
+
+.swimming-container {
+  position: relative;
+  text-align: center;
+  margin-left: 50px;
+  width: 100%;
+  height: 150px;
+  overflow: hidden;
+}
+
+.swimming-inner {
+  position: absolute;
+  top: 50%;
+  left: -100px;
+  animation: swim 5s ease-out 1 forwards;
+}
+
+.swimming-image {
+  position: relative;
+  width: 100px; /* イメージの幅に合わせて調整してください */
+  height: auto; /* イメージの高さに合わせて調整してください */
+}
+
+.speech-bubble {
+  position: absolute;
+  top: 50%;
+  left: 100%;
+  transform: translateX(10px) translateY(-50%);
+  padding: 10px;
+  background-color: #D1F5D1;
+  color: #333;
+  border: 2px solid #0F910F;
+  border-radius: 10px;
+  white-space: nowrap;
+  opacity: 0;
+  animation: showBubble 0.5s ease-out 5s forwards;
+}
+
+.triangle {
+  position: absolute;
+  top: 50%;
+  left: -10px;
+  transform: translateY(-50%);
+  width: 0;
+  height: 0;
+  border-top: 10px solid transparent;
+  border-right: 10px solid #0F910F;
+  border-bottom: 10px solid transparent;
+  opacity: 0;
+  animation: showBubble 0.5s ease-out 5s forwards;
+}
+
+.message {
+  margin-left: 10px;
+}
+
+@keyframes swim {
+  0% {
+    transform: translateY(-50px) translateX(0);
+  }
+  25% {
+    transform: translateY(-40px) translateX(25%);
+  }
+  50% {
+    transform: translateY(0) translateX(50%);
+  }
+  75% {
+    transform: translateY(40px) translateX(75%);
+  }
+  100% {
+    transform: translateY(0px) translateX(100%);
+  }
+}
+
+@keyframes showBubble {
+  0% {
+    opacity: 0; 
+  }
+  100% {
+    opacity: 1; 
+  }
+}
+
 .rounded-circle {
-  border: 10px solid rgba(0,80,200,0.2); 
+  border: 10px solid rgba(0, 80, 200, 0.2);
 }
