--- a/2023/winter/entry/assets/css/style.css
+++ b/2023/winter/entry/assets/css/style.css
@@ -14,18 +14,18 @@ header .title {
 
 main {
   margin-top: -72px;
-  background-image: url(../img/dragon.png);
-  background-repeat: no-repeat;
-  background-size: contain;
-  display: block;
   width: 100%;
   height: 100vh;
+  position: relative;
 }
 
 main h1 {
+  position: absolute;
   font-family: serif;
+  animation-duration: 3s;
+  animation-name: fadein;
   font-weight: 600;
-  padding-top: 120px;
+  padding-top: 140px;
   padding-left: 40px;
   display        : inline-block;
   color          : #ffffff;
@@ -37,9 +37,39 @@ main h1 {
                -2px -2px 10px #333;
 }
 
+main .bg_wrapper {
+  width: 100%;
+}
+
+.limit {
+  width: 100%;
+  margin: 0;
+  font-size: 1rem;
+  color: white;
+  padding: 1rem;
+  text-align: center;
+  font-weight: 400;
+  letter-spacing: 3px;
+  background-image: repeating-linear-gradient( 135deg, #111, #111 10px, #222 10px, #222 20px);
+}
+
+.limit strong{
+  font-size: 2rem;
+  font-weight: 700;
+  color: rgb(222, 190, 29);
+}
+
+main .bg {
+  width: 100%;
+}
+
 @media (min-width: 1000px) {
   main {
     background-size: cover;
+  }
+  main .bg_wrapper {
+    height: 500px;
+    overflow: hidden;
   }
 }
 
