--- a/2023/winter/entry/assets/css/style.css
+++ b/2023/winter/entry/assets/css/style.css
@@ -97,7 +97,6 @@ main .attention h3{
     height: 400%;
   }
 }
-
 @media (max-width: 767.98px) {
   header img {
     width: 71px;
@@ -113,10 +112,87 @@ main .attention h3{
   }
 }
 
+.course_header {
+  text-align: center;
+}
+
+.course_header_title {
+  font-weight: 700;
+  margin: 1rem;
+}
+.course_header_description {
+  font-size: 1.2rem;
+  font-weight: 700;
+}
+
+.course_master {
+  position: relative;
+  padding: 2rem;
+  overflow: hidden;
+}
+
+.course_master.active .bg {
+  background: rgb(69, 17, 154);
+}
+
+.animation_course .bg {
+  position: absolute;
+  content: '';
+  top:0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
+
+.animation_course.active .bg {
+  animation-duration: 1s;
+  animation-name: course_box;
+}
+
+.course_normal {
+  position: relative;
+  padding: 2rem;
+  overflow: hidden;
+}
+
+.course_normal.active .bg {
+  background: rgb(35, 131, 150);
+}
+
+.course_box .course_title {
+  margin-bottom: 1rem;
+}
+
+.course_box .course_title h4 {
+  color: white;
+  font-size: 2rem;
+  border: 2px solid white;
+  border-radius: 5px;
+  display: inline;
+  padding: 5px;
+}
+
+.course_box .course_description {
+  color: white;
+  font-size: 1.5rem;
+  display: inline;
+}
+
 .jq-animation-fadein {
   animation-duration: 3s;
   animation-name: fadein;
   position: relative;
+}
+
+.animation-below {
+  visibility: hidden;
+}
+
+.animation-below.active {
+  visibility: visible;
+  animation-duration: 1s;
+  animation-name: below;
 }
 
 @keyframes fadein {
@@ -128,5 +204,29 @@ main .attention h3{
   to {
     opacity: 1;
     top: 0;
+  }
+}
+
+@keyframes below {
+  from {
+    opacity: 0;
+    transform: translateY(100%);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateY(0%);
+  }
+}
+
+@keyframes course_box {
+  from {
+    opacity: 0;
+    transform: translate(-100%, 0)
+  }
+
+  to {
+    opacity: 1;
+    transform: translate(0, 0)
   }
 }
