スタイル修正

--- a/2023/winter/result/assets/css/style.css
+++ b/2023/winter/result/assets/css/style.css
@@ -229,6 +229,8 @@ main .bg {
 
 .work .menu a {
   text-decoration: none;
+  display: inline-block;
+  margin-bottom: 40px;
 }
 
 .work .menu a:hover {
