--- a/2024/summer/entry/assets/css/style.css
+++ b/2024/summer/entry/assets/css/style.css
@@ -492,6 +492,82 @@ main .attention h3{
   }
 }
 
+.shoujou {
+  background-color: rgb(211, 182, 211);
+  text-align: center;
+  background: url(../img/sea.jpg) left top no-repeat;
+  background-size: cover;
+}
+
+.shoujou > .title {
+  padding: 3rem 0;
+}
+
+.shoujou h2 {
+  font-family: "M PLUS Rounded 1c", sans-serif;
+  color: rgb(255 255 255);
+  font-size: 3vw;
+  background: #176fc0;;
+  display: inline;
+  padding: 10px 50px;
+  border-radius: 10px;
+}
+
+.shoujou strong {
+  font-size: 1.4rem;
+  color: rgb(223, 99, 99);
+  text-decoration: underline;
+}
+
+.shoujou .message {
+  width: 90%;
+  background-color: #232323;
+  margin: 2rem auto;
+  padding: 2rem;
+  border-radius: 2rem;
+}
+
+.shoujou img {
+  width: 60%;
+  margin-top: 2rem;
+  margin-bottom: 30px;
+}
+
+.shoujou .description {
+  width: 95%;
+  margin-left: 2%;
+  background: #fabc75ad;
+  padding: 1rem;
+  border-radius: 1rem;
+  font-weight: 600;
+  border: 2px solid rgb(90, 22, 90);
+}
+
+.shoujou .zoutei {
+  background-color: #bce0ff;
+  border: 2px solid #176fc0;
+  border-radius: 10px;
+  display: inline-block;
+  padding: 10px;
+  font-size: 1.3rem;
+  width: 80%;
+  position: relative;
+}
+
+.shoujou .zoutei img {
+  position: absolute;
+  top: -140px;
+  right: 0px;
+  width: 150px;
+  height: 150px;
+}
+
+@media (max-width: 768px) {
+  .shoujou .description {
+    margin-top: 2rem;
+  }
+}
+
 .oubo {
   background: rgb(251, 223, 211);
   background-image: linear-gradient(45deg, rgb(255, 208, 190) 25%, transparent 25%, transparent 75%, rgb(255, 208, 190) 75%), linear-gradient(45deg, rgb(255, 208, 190) 25%, transparent 25%, transparent 75%, rgb(255, 208, 190) 75%);
@@ -539,6 +615,17 @@ main .attention h3{
   padding: 1rem;
   border-radius: 1rem;
   font-weight: 600;
+  border: 2px solid rgb(90, 22, 90);
+  position: relative;
+}
+
+.oubo .description img {
+  position: absolute;
+  bottom: 0px;
+  right: 0px;
+  width: 150px;
+  height: 150px;
+  border: 0;
 }
 
 @media (max-width: 768px) {
@@ -638,6 +725,10 @@ main .attention h3{
   color: rgb(220, 83, 3);
   display: inline-block;
   width: 100%;
+}
+
+.award ul li.gold ul li {
+  color: rgb(220, 83, 3);
 }
 
 .award ul li.gold ul li:hover {
