--- a/2024/summer/result/assets/css/style.css
+++ b/2024/summer/result/assets/css/style.css
@@ -34,7 +34,7 @@ header .title a {
 main .header .result {
   position: relative;
   top: 20vw;
-  left: 2vw;
+  padding-left: 4vw;
 }
 
 main .header .result p {
