結果発表ページを更新

--- a/2024/summer/result/assets/css/style.css
+++ b/2024/summer/result/assets/css/style.css
@@ -1352,3 +1352,59 @@ header img {
     font-size: 1.2rem;
   }
 }
+
+.entry.gold {
+  background: url(../img/gold_bg.png);
+  background-position: 0px;
+}
+
+.entry .white_alpha {
+  background-color: rgba(255,255,255, 0.6);
+  margin: -1rem;
+  border-radius: 0.375rem;
+  border-top-left-radius: 0 !important;
+  border-top-right-radius: 0 !important;
+  padding: 1rem;
+  padding-top: 2rem;
+}
+
+.award_tip {
+  margin-bottom: 2rem;
+  border-radius: 0.375rem;
+  border-bottom-left-radius: 0 !important;
+  border-bottom-right-radius: 0 !important;
+  font-size: 2.5rem;
+  line-height: 4rem;
+  font-family: "Times New Roman" , "游明朝" , "Yu Mincho" , "游明朝体" , "YuMincho" , "ヒラギノ明朝 Pro W3" , "Hiragino Mincho Pro" , "HiraMinProN-W3" , "HGS明朝E" , "ＭＳ Ｐ明朝" , "MS PMincho" , serif;
+  font-weight: bold;
+}
+
+.entry.silver {
+  background: url(../img/silver_bg.png);
+  background-position: 0px;
+}
+
+.entry.special {
+  background: url(../img/special_bg.jpg);
+  background-position: 0px;
+}
+
+.entry.lambda {
+  background: url(../img/lambda_bg.jpg);
+  background-position: 0 -100px;
+  position: relative;
+  margin-top: 2rem;
+}
+
+.entry.lambda img.lambda_illust{
+  position: absolute;
+  width: 9rem;
+  right: 0;
+  top: -3.6rem;
+  z-index: 1;
+}
+
+.entry.lambda .award_tip{
+  z-index: 2;
+  position: relative;
+}
